Added increment / decrement buttons in the mgen.html

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -19,16 +19,50 @@
 	<div id="columnMiddle">
 	<!-- Graphs represent a percentage of maximum potential as determined by challenge rating and in the case of HP, size. 
 		DMs may increase or decrease this maximum MANUALLY by clicking plus and minus buttons next to the graphs. -->
-		<div class='graph' id="sizeGraph"></div> <!-- Size determines HP potential; so does CHALLENGE RATING. --> 
-		<div class='graph' id="HPGraph"></div> <!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
-		<div class='graph' id="strGraph"></div> <!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+		
+		<!-- Size determines HP potential; so does CHALLENGE RATING. --> 
+		<div class='graph' id="sizeGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div> 
+
+		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
+		<div class='graph' id="HPGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div> 
+
+		 <!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+		<div class='graph' id="strGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div>
 	</div> 
 	
 	<div id="columnRight">		
-		<div class='graph' id="chaGraph"></div> <!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<div class='graph' id="dexGraph"></div> <!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<div class='graph' id="intGraph"></div> <!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<div class='graph' id="wisGraph"></div> <!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+		<div class='graph' id="chaGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div> 
+
+		<!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<div class='graph' id="dexGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div> 
+
+		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<div class='graph' id="intGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div> 
+
+		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<div class='graph' id="wisGraph">
+			<button class="incrementButton">+</button>
+			<button class="decrementButton">+</button>
+		</div> 
 	</div> 
 	
 </body> 
