--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -23,19 +23,19 @@
 		<!-- Size determines HP potential; so does CHALLENGE RATING. --> 
 		<div class='graph' id="sizeGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
 		<div class='graph' id="HPGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div> 
 
 		 <!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
 		<div class='graph' id="strGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div>
 	</div> 
 	
@@ -43,25 +43,25 @@
 		<!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
 		<div class='graph' id="chaGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
 		<div class='graph' id="dexGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
 		<div class='graph' id="intGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
 		<div class='graph' id="wisGraph">
 			<button class="incrementButton">+</button>
-			<button class="decrementButton">+</button>
+			<button class="decrementButton">-</button>
 		</div> 
 	</div> 
 	
