--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -3,6 +3,9 @@
 <head>
 	<title> NPC & Monster Generator </title> 
 	<link rel="stylesheet" type="text/css" href="css/mgen.css" /> 
+
+	<script src="js/statgraph.js"></script>
+
 </head> 
 
 <body>
