--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -4,6 +4,7 @@
 	<title> NPC & Monster Generator </title> 
 	<link rel="stylesheet" type="text/css" href="css/mgen.css" /> 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/statgraph.js"></script>
 
 
