--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -48,18 +48,21 @@
 		DMs may increase or decrease this maximum MANUALLY by clicking plus and minus buttons next to the graphs. -->
 		
 		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
+		<h2>HP</h2>
 		<div class='graph' id="HPGraph">
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+		<h2>Strength</h2>
 		<div class='graph' id="strGraph">
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</div>
 		
 		<!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+		<h2>Charisma</h2>
 		<div class='graph' id="chaGraph">
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
@@ -70,18 +73,21 @@
 		
 
 		<!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<h2>Dexterity</h2>
 		<div class='graph' id="dexGraph">
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<h2>Intelligence</h2>
 		<div class='graph' id="intGraph">
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</div> 
 
 		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+		<h2>Wisdom</h2>
 		<div class='graph' id="wisGraph">
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
