Deleted and moved around unnecessary leftovers.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -40,7 +40,14 @@
 			<option>Chaotic Evil</option>
 			<option>Unaligned</option>
 		</select> </p>
-		<button class="userStatInputs">GENERATE</button>
+		<p>Movement Type:<select class="userStatInputs"> <!-- Movement type determines how the monster traverses the environment -->
+			<option>Burrow</option>
+			<option>Climb</option>
+			<option>Fly</option>
+			<option>Hover</option>
+			<option>Swim</option>
+		</select> </p>
+		<button class="userStatInputs" id="generateButton">GENERATE</button>
 	</div> 
 	
 	<div id="columnMiddle">
