--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -7,8 +7,9 @@
 	<!-- Import jQuery --> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<!-- Graph library --> 
+	<script src="js/Chart.js/Chart.js"></script>
 	<script src="js/Chart.js/src/Chart.Bar.js"></script>
-
+	<script src="js/graphManager.js"></script> 
 
 	<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
 </head> 
