Edited button placement for graphs

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -59,24 +59,29 @@
 		DMs may increase or decrease this maximum MANUALLY by clicking plus and minus buttons next to the graphs. -->
 		
 		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
-		<h2>HP</h2>
-		<canvas class='graph' id="hpGraph">
+		<h2>HP
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
+		</h2>
+		<canvas class='graph' id="hpGraph">
+			
 		</canvas>
 
 		<!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<h2>Strength</h2>
-		<canvas class='graph' id="strGraph">
+		<h2>Strength
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
+		</h2>
+		<canvas class='graph' id="strGraph">
 		</canvas>
 		
 		<!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<h2>Charisma</h2>
-		<canvas class='graph' id="chaGraph">
+		<h2>Charisma
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
+		</h2>
+		<canvas class='graph' id="chaGraph">
+			
 		</canvas>
 	</div> 
 	
@@ -84,24 +89,30 @@
 		
 
 		<!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2>Dexterity</h2>
-		<canvas class='graph' id="dexGraph">
+		<h2>Dexterity
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
+		</h2>
+		<canvas class='graph' id="dexGraph">
+			
 		</canvas>
 
 		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2>Intelligence</h2>
-		<canvas class='graph' id="intGraph">
+		<h2>Intelligence
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
+		</h2>
+		<canvas class='graph' id="intGraph">
+			
 		</canvas>
 
 		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2>Wisdom</h2>
-		<canvas class='graph' id="wisGraph">
+		<h2>Wisdom
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
+		</h2>
+		<canvas class='graph' id="wisGraph">
+			
 		</canvas> 
 	</div> 
 	
