Prevented user from highlighting graph headings, which would occur when selecting points on a graph.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -59,7 +59,7 @@
 		DMs may increase or decrease this maximum MANUALLY by clicking plus and minus buttons next to the graphs. -->
 		
 		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
-		<h2>HP
+		<h2 class="noSelect">HP
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</h2>
@@ -68,7 +68,7 @@
 		</canvas>
 
 		<!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<h2>Strength
+		<h2 class="noSelect">Strength
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</h2>
@@ -76,7 +76,7 @@
 		</canvas>
 		
 		<!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<h2>Charisma
+		<h2 class="noSelect">Charisma
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</h2>
@@ -89,7 +89,7 @@
 		
 
 		<!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2>Dexterity
+		<h2 class="noSelect">Dexterity
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</h2>
@@ -98,7 +98,7 @@
 		</canvas>
 
 		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2>Intelligence
+		<h2 class="noSelect">Intelligence
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</h2>
@@ -107,7 +107,7 @@
 		</canvas>
 
 		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2>Wisdom
+		<h2 class="noSelect">Wisdom
 			<button class="incrementButton">+</button>
 			<button class="decrementButton">-</button>
 		</h2>
