Added a new js file that starts compiling the user inputted stats for the NPC and generates them in the console.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -10,7 +10,8 @@
 	<script src="js/Chart.js/Chart.js"></script>
 	<script src="js/Chart.js/src/Chart.Bar.js"></script>
 	<script src="js/graphManager.js"></script> 
-
+	<script src="js/generateNPC.js"></script> 
+	<!--Font-->
 	<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
 </head> 
 
@@ -23,7 +24,7 @@
 		<div id="picture"><img src="imgs/puppy.jpg" alt="puppy"> </div> <!-- picture, perhaps selectable from a dropdown menu of standard monster pictures or NPC pictures. --> 
 		<p>Challenge Rating: <input val="1" class="userStatInputs"></p> <!-- Challenge rating determines stat potential. -->
 		<p>Type: <input val="Abberations" class="userStatInputs"></p> <!-- Type determines what kind of monster they are -->
-		<p>Size Rating:<select class="userStatInputs"> <!-- Size rating determines health and damage potential -->
+		<p>Size Rating:<select class="userStatInputs" id="sizeStatInput"> <!-- Size rating determines health and damage potential -->
 			<option>Tiny</option>
 			<option>Small</option>
 			<option>Medium</option>
@@ -31,7 +32,7 @@
 			<option>Huge</option>
 			<option>Gargantuan</option>
 		</select> </p>
-		<p>Alignment:<select class="userStatInputs"> <!-- Classic Alignment System -->
+		<p>Alignment:<select class="userStatInputs" id="alignmentStatInput"> <!-- Classic Alignment System -->
 			<option>Unaligned</option>
 			<option>Lawful Good</option>
 			<option>Lawful Neutral</option>
@@ -42,16 +43,15 @@
 			<option>Chaotic Good</option>
 			<option>Chaotic Neutral</option>
 			<option>Chaotic Evil</option>
-
 		</select> </p>
-		<p>Movement Type:<select class="userStatInputs"> <!-- Movement type determines how the monster traverses the environment -->
+		<p>Movement Type:<select class="userStatInputs" id="movementStatInput"> <!-- Movement type determines how the monster traverses the environment -->
 			<option>Burrow</option>
 			<option>Climb</option>
 			<option>Fly</option>
 			<option>Hover</option>
 			<option>Swim</option>
 		</select> </p>
-		<button class="userStatInputs" id="generateButton">GENERATE</button>
+		<button class="userStatInputs noSelect" id="generateButton">GENERATE</button>
 	</div> 
 	
 	<div id="columnMiddle">
@@ -81,7 +81,6 @@
 			<button class="decrementButton">-</button>
 		</h2>
 		<canvas class='graph' id="chaGraph">
-			
 		</canvas>
 	</div> 
 	
@@ -94,7 +93,6 @@
 			<button class="decrementButton">-</button>
 		</h2>
 		<canvas class='graph' id="dexGraph">
-			
 		</canvas>
 
 		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
@@ -103,7 +101,6 @@
 			<button class="decrementButton">-</button>
 		</h2>
 		<canvas class='graph' id="intGraph">
-			
 		</canvas>
 
 		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
@@ -112,7 +109,6 @@
 			<button class="decrementButton">-</button>
 		</h2>
 		<canvas class='graph' id="wisGraph">
-			
 		</canvas> 
 	</div> 
 	
