Added increment / decrement graph functions... Working test version on the HP graph. Check it out.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -60,8 +60,8 @@
 		
 		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING -->
 		<h2>HP
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
+			<button class="incrementButton" id="plusHP">+</button>
+			<button class="decrementButton" id="minusHP">-</button>
 		</h2>
 		<canvas class='graph' id="hpGraph">
 			
