Added Object script to create objects Added stroke start/stop detection (for object bounding boxes)

--- a/update/index.html
+++ b/update/index.html
@@ -13,12 +13,12 @@
     <script type="text/javascript" src="scripts/chat.js"></script>
     <script type="text/javascript" src="scripts/commands.js"></script>
     <script type="text/javascript" src="scripts/file-io.js"></script>
+    <script type="text/javascript" src="scripts/object.js"></script>
     <script type="text/javascript" src="scripts/object-manager.js"></script>
     <script type="text/javascript" src="scripts/settings.js"></script>
     <script type="text/javascript" src="scripts/tools.js"></script>
     <script type="text/javascript" src="scripts/user.js"></script>
   </head>
   <body>
-
   </body>
 </html>
