Finished internal creation of an NPC

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -20,10 +20,10 @@
 	<h1> Monster Generator </h1> 
 	
 	<div id="columnLeft">
-		<p>Name: <input class="userStatInputs"> </input placeholder = "Name here"> <p> 
+		<p>Name: <input class="userStatInputs" id="nameStatInput"> </input placeholder = "Name here"> <p> 
 		<div id="picture"><img src="imgs/puppy.jpg" alt="puppy"> </div> <!-- picture, perhaps selectable from a dropdown menu of standard monster pictures or NPC pictures. --> 
-		<p>Challenge Rating: <input val="1" class="userStatInputs"></p> <!-- Challenge rating determines stat potential. -->
-		<p>Type: <input val="Abberations" class="userStatInputs"></p> <!-- Type determines what kind of monster they are -->
+		<p>Challenge Rating: <input val="1" class="userStatInputs" id="challengeStatInput"></p> <!-- Challenge rating determines stat potential. -->
+		<p>Type: <input val="Abberations" class="userStatInputs" id="typeStatInput"></p> <!-- Type determines what kind of monster they are -->
 		<p>Size Rating:<select class="userStatInputs" id="sizeStatInput"> <!-- Size rating determines health and damage potential -->
 			<option>Tiny</option>
 			<option>Small</option>
