--- a/update/index.html
+++ b/update/index.html
@@ -6,12 +6,14 @@
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
 
+
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/driftwood.js"></script>
 
     <script type="text/javascript" src="scripts/canvas-manager.js"></script>
     <script type="text/javascript" src="scripts/chat.js"></script>
     <script type="text/javascript" src="scripts/commands.js"></script>
+    <script type="text/javascript" src="scripts/drawing.js"></script>
     <script type="text/javascript" src="scripts/file-io.js"></script>
     <script type="text/javascript" src="scripts/object.js"></script>
     <script type="text/javascript" src="scripts/object-manager.js"></script>
