Finished Pathfinder data on class ability bonuses, etc.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -9,6 +9,10 @@
 	<!-- Graph library --> 
 	<script src="js/Chart.js/Chart.js"></script>
 	<script src="js/Chart.js/src/Chart.Bar.js"></script>
+
+	<!-- Dependencies for Pathfinder data --> 
+	<script src="js/pathfinder/statGrowth.js"></script> 
+	<script src="js/pathfinder/characterPresets.js"></script> 
 	<script src="js/graphManager.js"></script> 
 	<!--Font-->
 	<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
