Fixed image uploader. It works now!

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -22,7 +22,10 @@
 	<div id="columnLeft">
 		<p>Name: <input class="userStatInputs" id="nameStatInput"> </input placeholder = "Name here"> <p> 
 		<div id="picture"><img src="imgs/puppy.jpg" alt="puppy" id="tempPicture"> </div> <!-- picture, perhaps selectable from a dropdown menu of standard monster pictures or NPC pictures. --> 
-		<input type="file" id="fileEdit"></input>
+		<input type="file" id="getimage">
+		<div id="imgstore"></div>
+		
+		
 		<p>Challenge Rating: <input val="1" class="userStatInputs" id="challengeStatInput"></p> <!-- Challenge rating determines stat potential. -->
 		<p>Type: <input val="Abberations" class="userStatInputs" id="typeStatInput"></p> <!-- Type determines what kind of monster they are -->
 		<p>Size Rating:<select class="userStatInputs" id="sizeStatInput"> <!-- Size rating determines health and damage potential -->
