--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -10,6 +10,7 @@
 	<script src="js/Chart.js/Chart.js"></script>
 	<script src="js/Chart.js/src/Chart.Bar.js"></script>
 	<script src="js/generateNPC.js"></script>
+	<script src="js/imageManipulation.js"></script>
 	<script src="js/graphManager.js"></script> 
 	<!--Font-->
 	<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
