--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -11,8 +11,10 @@
 	<script src="js/Chart.js/src/Chart.Bar.js"></script>
 
 	<!-- Dependencies for Pathfinder data --> 
+	<script src="js/pathfinder/modifiers.js"></script>
 	<script src="js/pathfinder/statGrowth.js"></script> 
-	<script src="js/pathfinder/characterPresets.js"></script> 
+	<script src="js/pathfinder/characterPresets.js"></script>
+	<script src="js/characterInfo.js"></script> 
 	<script src="js/graphManager.js"></script> 
 	<!--Font-->
 	<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
