--- a/update/index.html
+++ b/update/index.html
@@ -3,6 +3,17 @@
   <head>
     <title>DriftwoodRP Front Rebuild</title>
 
+    <style>
+      .noselect {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+    </style>
+
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
 
@@ -22,5 +33,6 @@
     <script type="text/javascript" src="scripts/user.js"></script>
   </head>
   <body>
+    <span class='noselect' id='mode-display'>Current Mode: Draw</span>
   </body>
 </html>
