Initialized ability score radar graph correctly. Next step: Changing values with buttons

--- a/monster-generator/genv2.html
+++ b/monster-generator/genv2.html
@@ -18,6 +18,8 @@
 	<script src="js/pathfinder/modifiers.js"></script>
 	<script src="js/pathfinder/statGrowth.js"></script> 
 	<script src="js/pathfinder/characterPresets.js"></script>
+
+	<script src="js/grapher.js"></script>
 	<script src="js/characterInfo.js"></script> 
 </head> 
 
@@ -51,8 +53,8 @@
     		</select></p>
     </div>
     <div class="rightCol">
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-    	<div id="abilityScoreGraph"></div>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    	<div id="abilityScoreGraph"><canvas id="abilityScoreGraphCanvas"></canvas></div>
     </div>
     <div class="clearDiv"></div>
   </div>
