Added a place for remaining points.

--- a/monster-generator/genv2.html
+++ b/monster-generator/genv2.html
@@ -53,7 +53,7 @@
     		</select></p>
     </div>
     <div class="rightCol">
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <p>Points Remaining: <input value ='15' class="lineInput"></p>
     	<div id="abilityScoreGraph"><canvas id="abilityScoreGraphCanvas"></canvas></div>
     </div>
     <div class="clearDiv"></div>
