+ Working increment / decrement for ability score radar chart.

--- a/monster-generator/genv2.html
+++ b/monster-generator/genv2.html
@@ -31,6 +31,7 @@
     <li><a href="#fragment-1">Basic Details & Stats</a></li>
     <li><a href="#fragment-2">Skills & Feats</a></li>
     <li><a href="#fragment-3">Inventory & Wealth</a></li>
+    <li><a href="#fragment-4">Levels</a></li>
   </ul>
   <div id="fragment-1">
   	<div class="leftCol">
@@ -54,6 +55,22 @@
     </div>
     <div class="rightCol">
     <p>Points Remaining: <input value ='15' class="lineInput"></p>
+
+    <br>
+    <button id="strPlus" class="upBtn">STR +</button> <button id="strMinus" class="downBtn">STR -</button><br>
+
+    <button id="conPlus" class="upBtn">CON +</button><button id="conMinus" class="downBtn">CON -</button><br>
+
+    <button id="dexPlus" class="upBtn">DEX +</button><button id="dexMinus" class="downBtn">DEX -</button><br>
+
+    <button id="chaPlus" class="upBtn">CHA +</button><button id="chaMinus" class="downBtn">CHA -</button><br>
+
+    <button id="wisPlus" class="upBtn">WIS +</button><button id="wisMinus" class="downBtn">WIS -</button><br>
+
+    <button id="intPlus" class="upBtn">INT +</button><button id="intMinus" class="downBtn">INT -</button><br>
+
+
+
     	<div id="abilityScoreGraph"><canvas id="abilityScoreGraphCanvas"></canvas></div>
     </div>
     <div class="clearDiv"></div>
@@ -63,6 +80,9 @@
   </div>
   <div id="fragment-3">
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+  </div>
+  <div id="fragment-4">
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
   </div>
 </div>
 </body> 
