Added a list that you can view and select each NPC you generate.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -62,6 +62,9 @@
 			<option>Swim</option>
 		</select> </p>
 		
+		<p>NPC List:<select class="userStatInputs" id="npcList">
+		</select></p>
+		
 		<button class="userStatInputs noSelect" id="generateButton">GENERATE</button>
 	</div> 
 	
