Added more logic for the radar graph. Added initial values of 10 for the character's ability scores.

--- a/monster-generator/genv2.html
+++ b/monster-generator/genv2.html
@@ -54,7 +54,7 @@
     		</select></p>
     </div>
     <div class="rightCol">
-    <p>Points Remaining: <input value ='15' class="lineInput"></p>
+    <p>Points Remaining: <input value ='15' class="lineInput" id="pointsRemaining"></p>
 
     <br>
     <button id="strPlus" class="upBtn">STR +</button> <button id="strMinus" class="downBtn">STR -</button><br>
