--- a/update/index.html
+++ b/update/index.html
@@ -12,6 +12,10 @@
         -ms-user-select: none;
         user-select: none;
       }
+
+      #mode-display {
+        position: absolute;
+      }
     </style>
 
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
