Edited each file to adhere to new coding standards.

--- a/monster-generator/mgen.html
+++ b/monster-generator/mgen.html
@@ -1,3 +1,16 @@
+<!--
+*******************************************
+//	Image Man
+//
+//	Filename: generateNPC.js
+//
+//	Authors
+//	Mario Chuman		<mxc7819@g.rit.edu>
+//	Gabrielle Bennett	<gmb9280@g.rit.edu>
+//
+//*******************************************
+-->
+
 <!doctype HTML>
 
 <head>
