--- a/update/index.html
+++ b/update/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="scripts/commands.js"></script>
     <script type="text/javascript" src="scripts/drawing.js"></script>
     <script type="text/javascript" src="scripts/file-io.js"></script>
+    <script type="text/javascript" src="scripts/grid.js"></script>
     <script type="text/javascript" src="scripts/object.js"></script>
     <script type="text/javascript" src="scripts/object-manager.js"></script>
     <script type="text/javascript" src="scripts/settings.js"></script>
