Added ability to toggle bounding outline on or off Added ability to toggle debug text on or off

--- a/update/index.html
+++ b/update/index.html
@@ -38,6 +38,9 @@
     <script type="text/javascript" src="scripts/user.js"></script>
   </head>
   <body>
-    <span class='noselect' id='mode-display'>Current Mode: Draw</span>
+    <div id='debug-text'>
+      <span class='noselect' id='mode-display'>Current Mode: Draw</span><br>
+      <span class='noselect' id='bounding-display'>Displaying Bounding Volumes: false</span>
+    </div>
   </body>
 </html>
