--- a/update/index.html
+++ b/update/index.html
@@ -3,20 +3,7 @@
   <head>
     <title>DriftwoodRP Front Rebuild</title>
 
-    <style>
-      .noselect {
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      #mode-display {
-        position: absolute;
-      }
-    </style>
+    <link rel='stylesheet' href='css/main.css'>
 
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
@@ -31,6 +18,8 @@
     <script type="text/javascript" src="scripts/drawing.js"></script>
     <script type="text/javascript" src="scripts/file-io.js"></script>
     <script type="text/javascript" src="scripts/grid.js"></script>
+    <script type="text/javascript" src="scripts/helper.js"></script>
+    <script type="text/javascript" src="scripts/layer.js"></script>
     <script type="text/javascript" src="scripts/object.js"></script>
     <script type="text/javascript" src="scripts/object-manager.js"></script>
     <script type="text/javascript" src="scripts/settings.js"></script>
@@ -40,7 +29,8 @@
   <body>
     <div id='debug-text'>
       <span class='noselect' id='mode-display'>Current Mode: Draw</span><br>
-      <span class='noselect' id='bounding-display'>Displaying Bounding Volumes: false</span>
+      <span class='noselect' id='bounding-display'>Bounding Volumes: false</span><br>
+      <span class='noselect' id='layer-selected'>Current Layer: Object</span>
     </div>
   </body>
 </html>
