--- a/monster-generator/overlaysample.html
+++ b/monster-generator/overlaysample.html
@@ -17,7 +17,7 @@
 		{
 			$('#monster-bot-tabs').tabs();
 			loadCreature();
-			doTheParse();
+			//doTheParse();
 		};
 		window.onload = init; 
 	</script> 
