--- a/monster-generator/overlaysample.html
+++ b/monster-generator/overlaysample.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 	<!--<script src="js/creatureTemplate.js"></script>-->
 	<script src="js/creatureLoader.js"></script>
-	<!--<script src="js/pathfinder/bestiary.js"></script>-->
+	<script src="js/pathfinder/bestiary.js"></script>
 	<script src="js/bestParser.js"></script>
 	<!--<script src="js/saveObj.js"></script>-->
 	<script>
@@ -27,7 +27,7 @@
 			loadCreature();
 
 
-			//doTheParse();
+			doTheParse();
 		};
 		window.onload = init; 
 	</script> 
