Finished editing the CSS for all of the auxiliary pages.

--- a/auxiliary-pages/about.html
+++ b/auxiliary-pages/about.html
@@ -10,50 +10,50 @@
 		<img src = "../assets/images/driftwoodlogo.png"/>
 		<div id="control-group">
 			<div="controls">
-				<textarea readonly="readonly">
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
-				Test
+				<textarea readonly="readonly" rows="20">
+Driftwood is a project.
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test2
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
+Test
 				</textarea>
 			</div>
 		</div>
