Added and styled proper buttons for the auxiliary pages.

--- a/auxiliary-pages/about.html
+++ b/auxiliary-pages/about.html
@@ -9,7 +9,6 @@
 	<form id="aboutForm">
 		<img src = "../assets/images/driftwoodlogo.png"/>
 		<div id="control-group">
-			<div="controls">
 				<textarea readonly="readonly" rows="20">
 Driftwood is a project.
 Test
@@ -55,7 +54,9 @@ Test
 Test
 Test
 				</textarea>
-			</div>
+				<div id="controls">
+					<button class="driftwoodButtons">Back</button>
+				</div>
 		</div>
 	</form>
 </body>
