Created the basic tutorial page, added favicons, and started writing the text for the about page.

--- a/auxiliary-pages/about.html
+++ b/auxiliary-pages/about.html
@@ -3,6 +3,7 @@
 <head>
 	<title>About Driftwood</title>
 	<link rel="stylesheet" href="css/aux-pages.css"/>
+	<link rel="icon" type="image/png" href="../assets/img/favicon.ico"/>
 </head>
 
 <body>
@@ -10,9 +11,13 @@
 		<img src = "../assets/images/driftwoodlogo.png"/>
 		<div id="control-group">
 				<textarea readonly="readonly" rows="20">
-Driftwood is a project.
-Test
-Test
+Driftwood is an online roleplaying tool created by roleplayers for roleplayers.
+
+Create your account, gather your friends, and host rooms for you to map out your magic circle and have everyone share a unified vision.
+
+Driftwood is built to be able to be used with many roleplaying games including Dungeons and Dragons, Pathfinder, and many more!
+
+
 Test
 Test
 Test
