Can make new icons in the monster panel!

--- a/update/public/index.html
+++ b/update/public/index.html
@@ -163,7 +163,7 @@
         <button id='clear-room' onclick='CanvasManager.clear()'>Clear Room</button>
       </div>
       <div id="monsteredit">
-        <h1 id="monstertitle"> MONSTERNAME <div id="saveicon"></div><div id="xicon"></div></h1>
+        <h1><span id="monstertitle"> MONSTERNAME</span><div id="saveicon"></div><div id="xicon"></div></h1>
         <div class="monstercontent">
           <!-- tabs and stuff here --> 
           <div id="mgentabs">
